--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="container">
         <h2>2023</h2>
         <ul class="list-group">
-            <li class="list-group-item"><a href="./wwwSample Tournament/index.html">Demo tournament</a></li>
+            <li class="list-group-item"><a href="./wwwjunior chess championship/index.html">Junior Club Championship</a>
+            </li>
             <!-- Add more links as needed -->
         </ul>
 
