--- a/standings-template.html
+++ b/standings-template.html
@@ -83,7 +83,7 @@
                 <th>T</th>
                 <th>NAME</th>
                 <th>Rtg</th>
-                <th>Fed</th>
+                <th>U</th>
                 <th>Pts</th>
                 <th> BH </th>
                 <th> BH-C1 </th>
@@ -98,12 +98,15 @@
                 <td></td>
                 <td> <a href="playercard.html#{{this.N}}">{{this.NAME}}</a> </td>
                 <td>{{this.Rtg}}</td>
-                <td><img class="shadow" src="flag/aus.png" alt="AUS"></td>
+                <td>{{this.U}}</td>
                 </td>
                 <td class="score"> {{this.Pts}}</td>
                 <td> {{this.BH}}</td>
                 <td> {{this.BHC1}}</td>
-                <td>{{this.Reward}}</td>
+                <td>{{this.Reward}}
+
+
+                </td>
               </tr>
               {{/each}}
             </tbody>
