--- a/www/wwwjunior chess championship/rewards.html
+++ b/www/wwwjunior chess championship/rewards.html
@@ -108,7 +108,7 @@
                 <td class="score"> 5.0</td>
                 <td> 30.0</td>
                 <td> 28.0</td>
-                <td>🎖️ 1st runner up
+                <td>🥈 1st runner up
 
 
                 </td>
@@ -124,7 +124,7 @@
                 <td class="score"> 4.0</td>
                 <td> 24.0</td>
                 <td> 22.0</td>
-                <td>🎖️ 2nd runner up
+                <td>🥉 2nd runner up
 
 
                 </td>
@@ -203,7 +203,7 @@
                 <td class="score"> 3.0</td>
                 <td> 22.5</td>
                 <td> 20.5</td>
-                <td>🎖️ 1st runner up
+                <td>🥈 1st runner up
 
 
                 </td>
@@ -219,7 +219,7 @@
                 <td class="score"> 2.0</td>
                 <td> 22.5</td>
                 <td> 21.0</td>
-                <td>🎖️ 2nd runner up
+                <td>🥉 2nd runner up
 
 
                 </td>
@@ -330,7 +330,7 @@
                 <td class="score"> 3.0</td>
                 <td> 25.0</td>
                 <td> 23.5</td>
-                <td>🎖️ 1st runner up
+                <td>🥈 1st runner up
 
 
                 </td>
@@ -346,7 +346,7 @@
                 <td class="score"> 3.0</td>
                 <td> 25.0</td>
                 <td> 23.0</td>
-                <td>🎖️ 2nd runner up
+                <td>🥉 2nd runner up
 
 
                 </td>
@@ -489,7 +489,7 @@
                 <td class="score"> 4.0</td>
                 <td> 27.5</td>
                 <td> 25.5</td>
-                <td>🎖️ 1st runner up
+                <td>🥈 1st runner up
 
 
                 </td>
@@ -505,7 +505,7 @@
                 <td class="score"> 4.0</td>
                 <td> 27.0</td>
                 <td> 25.0</td>
-                <td>🎖️ 2nd runner up
+                <td>🥉 2nd runner up
 
 
                 </td>
