--- a/www/wwwjunior chess championship/rewards.html
+++ b/www/wwwjunior chess championship/rewards.html
@@ -47,7 +47,16 @@
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu"></ul>
           </li>
-         <li class="dropdown" id="rewards"><a href="rewards.html">Rewards</a></li></ul>
+        
+      <li class="dropdown" id="rewards"><a href="rewards.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rewards<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="rewards.html">Open</a></li>
+              <li><a href="rewards.html#U12">U12</a></li>
+              <li><a href="rewards.html#U10">U10</a></li>
+              <li><a href="rewards.html#U8">U8</a></li>
+              <li> <a href="rewards.html#Girls">Girls</a></li>
+            </ul>
+          </li></ul>
       </div>
     </div>
   </nav>
@@ -55,9 +64,9 @@
     <div class="page-header">
       <h2>junior club championship</h2>
     </div>
-    <h4> Standings at round 7 (last round)</h4>
+    <h4>  Rewards at round 7 (last round)</h4>
 
-
+    <a name="Open"></a>
     <div class="panel panel-default mt-5">
       <div class="panel-heading">
         <h3 class="panel-title text-center">Open</h3>
@@ -94,7 +103,6 @@
                 <td> 28.0</td>
                 <td>🏆 Winner
 
-
                 </td>
               </tr>
               <tr>
@@ -109,7 +117,6 @@
                 <td> 30.0</td>
                 <td> 28.0</td>
                 <td>🥈 1st runner up
-
 
                 </td>
               </tr>
@@ -126,7 +133,6 @@
                 <td> 22.0</td>
                 <td>🥉 2nd runner up
 
-
                 </td>
               </tr>
               <tr>
@@ -142,7 +148,6 @@
                 <td> 21.0</td>
                 <td>
 
-
                 </td>
               </tr>
             </tbody>
@@ -152,7 +157,7 @@
     </div>
 
 
-
+    <a name="Girl"></a>
     <div class="panel panel-default mt-5">
       <div class="panel-heading">
         <h3 class="panel-title text-center">Girl</h3>
@@ -189,7 +194,6 @@
                 <td> 24.0</td>
                 <td>🏆 Winner
 
-
                 </td>
               </tr>
               <tr>
@@ -204,7 +208,6 @@
                 <td> 22.5</td>
                 <td> 20.5</td>
                 <td>🥈 1st runner up
-
 
                 </td>
               </tr>
@@ -221,7 +224,6 @@
                 <td> 21.0</td>
                 <td>🥉 2nd runner up
 
-
                 </td>
               </tr>
               <tr>
@@ -236,7 +238,6 @@
                 <td> 23.5</td>
                 <td> 21.0</td>
                 <td>
-
 
                 </td>
               </tr>
@@ -253,7 +254,6 @@
                 <td> 20.0</td>
                 <td>
 
-
                 </td>
               </tr>
               <tr>
@@ -269,7 +269,6 @@
                 <td> 22.0</td>
                 <td>
 
-
                 </td>
               </tr>
             </tbody>
@@ -279,7 +278,7 @@
     </div>
 
 
-
+    <a name="U12"></a>
     <div class="panel panel-default mt-5">
       <div class="panel-heading">
         <h3 class="panel-title text-center">U12</h3>
@@ -316,7 +315,6 @@
                 <td> 27.0</td>
                 <td>🏆 Winner
 
-
                 </td>
               </tr>
               <tr>
@@ -331,7 +329,6 @@
                 <td> 25.0</td>
                 <td> 23.5</td>
                 <td>🥈 1st runner up
-
 
                 </td>
               </tr>
@@ -348,7 +345,6 @@
                 <td> 23.0</td>
                 <td>🥉 2nd runner up
 
-
                 </td>
               </tr>
               <tr>
@@ -363,7 +359,6 @@
                 <td> 22.5</td>
                 <td> 21.0</td>
                 <td>
-
 
                 </td>
               </tr>
@@ -380,7 +375,6 @@
                 <td> 22.5</td>
                 <td>
 
-
                 </td>
               </tr>
               <tr>
@@ -395,7 +389,6 @@
                 <td> 17.0</td>
                 <td> 16.0</td>
                 <td>
-
 
                 </td>
               </tr>
@@ -412,7 +405,6 @@
                 <td> 22.0</td>
                 <td>
 
-
                 </td>
               </tr>
               <tr>
@@ -428,7 +420,6 @@
                 <td> 17.5</td>
                 <td>
 
-
                 </td>
               </tr>
             </tbody>
@@ -438,7 +429,7 @@
     </div>
 
 
-
+    <a name="U10"></a>
     <div class="panel panel-default mt-5">
       <div class="panel-heading">
         <h3 class="panel-title text-center">U10</h3>
@@ -475,7 +466,6 @@
                 <td> 27.0</td>
                 <td>🏆 Winner
 
-
                 </td>
               </tr>
               <tr>
@@ -490,7 +480,6 @@
                 <td> 27.5</td>
                 <td> 25.5</td>
                 <td>🥈 1st runner up
-
 
                 </td>
               </tr>
@@ -507,7 +496,6 @@
                 <td> 25.0</td>
                 <td>🥉 2nd runner up
 
-
                 </td>
               </tr>
               <tr>
@@ -522,7 +510,6 @@
                 <td> 21.5</td>
                 <td> 20.0</td>
                 <td>
-
 
                 </td>
               </tr>
@@ -539,7 +526,6 @@
                 <td> 23.5</td>
                 <td>
 
-
                 </td>
               </tr>
               <tr>
@@ -554,7 +540,6 @@
                 <td> 23.0</td>
                 <td> 21.0</td>
                 <td>
-
 
                 </td>
               </tr>
@@ -571,7 +556,6 @@
                 <td> 23.5</td>
                 <td>
 
-
                 </td>
               </tr>
             </tbody>
@@ -581,7 +565,7 @@
     </div>
 
 
-
+    <a name="U8"></a>
     <div class="panel panel-default mt-5">
       <div class="panel-heading">
         <h3 class="panel-title text-center">U8</h3>
@@ -617,7 +601,6 @@
                 <td> 24.0</td>
                 <td> 22.0</td>
                 <td>🏆 Winner
-
 
                 </td>
               </tr>
