--- a/www/wwwjunior chess championship/rewards.html
+++ b/www/wwwjunior chess championship/rewards.html
@@ -12,7 +12,7 @@
       opacity: 0.3;
     }
   </style>
-</head>
+ <link rel="shortcut icon" type="image/x-icon" href="/tournaments/favicon.ico?"></head>
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -54,7 +54,7 @@
               <li><a href="rewards.html#U12">U12</a></li>
               <li><a href="rewards.html#U10">U10</a></li>
               <li><a href="rewards.html#U8">U8</a></li>
-              <li> <a href="rewards.html#Girls">Girls</a></li>
+              <li> <a href="rewards.html#Girl">Girls</a></li>
             </ul>
           </li></ul>
       </div>
