--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
     <title>Hobsons Bay Chess Club - Tournaments</title>
     <!-- Bootstrap CSS CDN Link -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="manifest" href="/tournaments/manifest.json" />
+    <link rel="shortcut icon" type="image/x-icon" href="/tournaments/favicon.ico?">
 </head>
 
 <body>
