--- a/www/wwwjunior chess championship/rewards.html
+++ b/www/wwwjunior chess championship/rewards.html
@@ -12,7 +12,7 @@
       opacity: 0.3;
     }
   </style>
- <link rel="shortcut icon" type="image/x-icon" href="/tournaments/favicon.ico?"></head>
+<link rel="manifest" href="/tournaments/manifest.json"> <link rel="shortcut icon" type="image/x-icon" href="/tournaments/favicon.ico?"></head>
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
