--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,15 @@
 
     <!-- Links separated by years -->
     <div class="container">
+        <h2>2024</h2>
+
+        <ul class="list-group">
+            <li class="list-group-item"><a href="./wwwHonourable Bob Juniors 2024/index.html">Honourable Bob Juniors
+                    2024</a>
+            </li>
+            <!-- Add more links as needed -->
+        </ul>
+
         <h2>2023</h2>
         <ul class="list-group">
             <li class="list-group-item"><a href="./wwwjunior chess championship/index.html">Junior Club Championship</a>
