--- a/www/index.html
+++ b/www/index.html
@@ -27,28 +27,21 @@
         <th>Tournament</th>
         <th>Date</th>
         <th>Site</th>
+        <th>Next Round</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td><a href="wwwHobsons Bay Chess Club">Honourable Bob Juniors 2024</a></td>
+        <td><a href="wwwHonourableBobJuniors2024/standings.html">Honourable Bob Juniors 2024</a></td>
         <td>30/01/2024</td>
         <td>Hobsons Bay Chess Club</td>
+           <td><a href="wwwHonourableBobJuniors2024/pairs5.html">5<a></a></td>
       </tr>
       <tr>
-        <td><a href="wwwHonourable Bob Juniors 2024">Honourable Bob Juniors 2024</a></td>
-        <td>30/01/2024</td>
-        <td>Hobsons Bay Chess Club</td>
-      </tr>
-      <tr>
-        <td><a href="wwwHonourableBobJuniors2024">Honourable Bob Juniors 2024</a></td>
-        <td>30/01/2024</td>
-        <td>Hobsons Bay Chess Club</td>
-      </tr>
-      <tr>
-        <td><a href="wwwjunior chess championship">junior club championship</a></td>
+        <td><a href="wwwjunior chess championship/standings.html">junior club championship</a></td>
         <td>10/10/2023</td>
         <td>Hobson bay chess club</td>
+           <td><a href="wwwjunior chess championship/pairs1.html">1<a></a></td>
       </tr>
      
     </tbody>
