--- a/www/wwwjunior chess championship/pairs4.html
+++ b/www/wwwjunior chess championship/pairs4.html
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta name="Vega" content="Windows">
   <title>junior club championship</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
-    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="tweak.css" type="text/css">
-  <link rel="manifest" href="//manifest.json">
-  <link rel="shortcut icon" type="image/x-icon" href="//favicon.ico?">
-</head>
+  
+  
+<link rel="manifest" href="/manifest.json"> <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?"></head>
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-          aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -30,8 +24,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-              aria-haspopup="true" aria-expanded="false">Players<span class="caret"></span></a>
+          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Players<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="index.html">Sorted by Rating</a></li>
               <li><a href="playersname.html">Sorted by Name</a></li>
@@ -42,15 +35,13 @@
           </li>
           <li class="dropdown"><a href="standings.html">Standings</a>
           </li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-              aria-haspopup="true" aria-expanded="false">Tables<span class="caret"></span></a>
+          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tables<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="schedule.html"> Schedule </a></li>
               <li><a href="crosstablescore.html"> Cross table by score </a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-              aria-haspopup="true" aria-expanded="false">Reports<span class="caret"></span></a>
+          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu"></ul>
           </li>
 
@@ -64,17 +55,18 @@
 
 
 
-          <li class="dropdown" id="rewards"><a href="rewards.html" class="dropdown-toggle" data-toggle="dropdown"
-              role="button" aria-haspopup="true" aria-expanded="false">Rewards<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="rewards.html">Open</a></li>
-              <li><a href="rewards.html#U12">U12</a></li>
-              <li><a href="rewards.html#U10">U10</a></li>
-              <li><a href="rewards.html#U8">U8</a></li>
-              <li> <a href="rewards.html#Girl">Girls</a></li>
-            </ul>
-          </li>
-        </ul>
+          
+        
+        <li class="nav-item dropdown" id="rewards">
+        <a href="rewards.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rewards<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a a="" class="dropdown-item" href="rewards.html">Open</a></li>
+                <li><a a="" class="dropdown-item" href="rewards.html#U12">U12</a></li>
+                <li><a a="" class="dropdown-item" href="rewards.html#U10">U10</a></li>
+                <li><a a="" class="dropdown-item" href="rewards.html#U8">U8</a></li>
+                <li> <a a="" class="dropdown-item" href="rewards.html#Girl">Girls</a></li>
+              </ul>
+            </li></ul>
       </div>
     </div>
   </nav>
@@ -271,11 +263,9 @@
       Club - AUS)</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
-</body>
 
-</html>
+
+</body></html>
